--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,94 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Akronim&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap");
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  font-family: "Roboto", sans-serif;
+}
+ul {
+  list-style: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* Nav */
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 14px;
+}
+nav > h1 {
+  font-family: "Akronim", cursive;
+  font-size: 36px;
+  background: -webkit-linear-gradient(limegreen 50%, green);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+#nav-list {
+  display: inline-flex;
+  justify-content: space-around;
+  transform: translateX(-80px);
+  gap: 40px;
+}
+a {
+  font-size: 22px;
+  font-family: "Roboto", sans-serif;
+  text-decoration: none;
+  background: -webkit-linear-gradient(limegreen 50%, green);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  transition-duration: 100ms;
+}
+a:hover {
+  border-bottom: 3px solid yellowgreen;
+}
+
+/* Home */
+#home {
+  background: url(./assets/BusinessPepe.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: calc(100vh - 69px);
+}
+
+/* Shop */
+#shop {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-content: center;
+  margin-top: 80px;
+}
+#shop-list {
+  display: grid;
+  grid-template-columns: repeat(3, 284px);
+  justify-items: center;
+  gap: 10px;
+}
+#pepe-item {
+  background-color: whitesmoke;
+  height: 284px;
+  width: 216px;
+  text-align: center;
+  cursor: pointer;
+}
+img {
+  width: 100%;
+  height: 91%;
+}
+
+/* About */
+#about {
+  width: 90%;
+  max-width: 720px;
+  margin: auto;
+  margin-top: 80px;
+  font-family: "Courier New", Courier, monospace;
+  font-size: larger;
+  color: greenyellow;
+  background: black;
+  padding: 10px;
 }
