--- a/src/index.css
+++ b/src/index.css
@@ -74,10 +74,22 @@ a:hover {
   width: 216px;
   text-align: center;
   cursor: pointer;
+  position: relative;
 }
 img {
   width: 100%;
   height: 91%;
+}
+#buy-pepe {
+  position: absolute;
+  top: 30%;
+  left: 40%;
+  color: white;
+  font-size: 100px;
+  text-shadow: 0px 0px 3px black;
+  opacity: 0;
+  transition-duration: 200ms;
+  transition-timing-function: linear;
 }
 
 /* About */
@@ -90,5 +102,6 @@ img {
   font-size: larger;
   color: greenyellow;
   background: black;
-  padding: 10px;
+  padding: 14px;
+  border-radius: 2px;
 }
